fixed topbar (still need to fix z-index with searchbar)

--- a/style.css
+++ b/style.css
@@ -314,10 +314,6 @@ a {
     opacity: .8;
 }
 
-div.topnav a {
-    background-color: black;
-}
-
 .audio {
     margin:2rem;
     display: inline-block;
@@ -344,6 +340,7 @@ p.guide{
     display: flex;
     position: absolute;
     align-items: center;
+    z-index: 1;
   }
 
   .search {
@@ -493,6 +490,8 @@ body {
 
 nav {
     display: flex;
+    position: fixed;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
     height: 50px;
@@ -502,10 +501,13 @@ nav {
 
 nav a {
     color: white;
+    background-color: black;
     text-decoration: none;
     padding: 6px 25px;
     border: black solid;
     border-radius: 10px;
+    z-index: 9999;
+    float: right;
   }
 
 nav a:hover {
@@ -517,12 +519,14 @@ nav a:hover {
 .left {
     display: flex;
     align-items: center;
+    z-index: 9999;
   }
 
 .right {
     display: flex;
     align-items: center;
     font-weight: 600;
+    z-index: 9999;
   }
 
 .content {
